Fix the spacing between the two columns on the homepage

--- a/avocet/css/avocet.base.css
+++ b/avocet/css/avocet.base.css
@@ -196,8 +196,13 @@ body {
 /* Home section */
 
 .oa-home-section {
-    padding: 44px 28px 56px 28px;
+    padding: 44px 28px 56px 0;
     text-align: center;
+}
+
+.oa-home-col:nth-child(2n) .oa-home-section {
+    padding-right: 0;
+    padding-left: 28px;
 }
 
 .oa-home-section h3 {
